# lrose-sgci

./: MANIFEST.in  README.md  output_views.py  setup.cfg  setup.py
custom-django-app/: setup.py
custom-django-app/custom_app/: output_views.py
custom-django-app/custom_app/templates/custom_app/: hello.html
custom-django-app/lrose_app/: apps.py
custom-django-app/lroseapp/: apps.py
custom-django-app/my_custom_django_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
custom_app/: apps.py  urls.py  views.py
custom_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
custom_app/templates/custom_app/: hello.html  home.html
