[metadata]
name = custom_app
version = 0.1.1
description = LROSE Custom Django app with everything needed to be installed in the airavata-django-portal

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 3.2
    airavata-django-portal-sdk

[options.entry_points]
airavata.djangoapp =
    custom_app = custom_app.apps:CustomAppConfig
